--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "type": "library",
     "description": "Composer repository.",
-    "homepage": "https://github.com/halftheory/wp-lib",
+    "homepage": "https://github.com/halftheory/wp-lib/",
     "authors": [
         {
             "name": "Half/theory",
